Add icon for cancel action as well as offline local instances

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,8 @@
   "enter_password" : "Enter password",
   "login" : "Login",
   "powered_by" : "Powered by",
+  "offline_instances" : "Offline instances",
+  "there_is_no_local_instance_to_select" : "There us no local instance to selectz",
   "apps" : "Apps",
   "account" : "Account",
   "about" : "About",
@@ -111,6 +113,7 @@
   "preparing_table" : "Preparing table",
   "loading_user_information" : "Loading user information",
   "loading_entry_form_information" : "Loading entry form information",
+  "loading_available_local_instances" : "Loading available local instances",
   "loading_indicators" : "Loading indicators",
   "prepare_entry_form" : "Prepare entry form",
   "loading_data_from_the_server" : "Loading data from the server",
