Updating en translations language settings, help, settins and ou selection messages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,7 +10,7 @@
   "login" : "Login",
   "powered_by" : "Powered by",
   "offline_instances" : "Offline instances",
-  "there_is_no_local_instance_to_select" : "There us no local instance to selectz",
+  "or": "or",
   "apps" : "Apps",
   "account" : "Account",
   "about" : "About",
@@ -18,6 +18,8 @@
   "help" : "Help",
   "logout" : "Logout",
   "settings" : "Settings",
+  "app_settings" : "App setting",
+  "current_language" : "Current language",
   "synchronization" : "Synchronization",
   "auto_sync" : "Auto sync",
   "minutes" : "Minute(s)",
@@ -111,6 +113,11 @@
   "event_for_tracker_status" : "Event for tracker status",
   "enrollments" : "Enrollments",
   "preparing_table" : "Preparing table",
+  "loading_current_user_information": "Loading current user information",
+  "loading_settings" : "Loading settings",
+  "loading_help_contents" : "Loading help contents",
+  "loading" : "Loading ...",
+  "loading_profile_information" : "Loading profile information",
   "loading_user_information" : "Loading user information",
   "loading_entry_form_information" : "Loading entry form information",
   "loading_available_local_instances" : "Loading available local instances",
@@ -118,6 +125,46 @@
   "prepare_entry_form" : "Prepare entry form",
   "loading_data_from_the_server" : "Loading data from the server",
   "saving_data_from_server" : "Saving data from server",
+  "loading_current_user_authorities" : "Loading current user authorities",
+  "prepare_local_storage" : "Preparing local storage",
+  "loading_assigned_organisation_units" : "Loading assigned organisation units",
+  "assigned_organisation_units_have_been_loaded" :"Assigned organisation units have been loaded",
+  "assigned_organisation_units_have_been_saved" :"Assigned organisation units have been saved",
+  "saving_assigned_organisation_units" : "Saving assigned organisation units",
+  "loading_entry_forms" : "Loading entry forms",
+  "entry_forms_have_been_loaded" : "Entry forms have been loaded",
+  "saving_entry_forms" : "Saving entry forms",
+  "entry_form_have_been_saved" : "Entry form have been saved",
+  "loading_entry_form_sections" : "Loading entry form sections",
+  "entry_form_sections_have_been_loaded" : "Entry form sections have been loaded",
+  "saving_entry_form_sections" : "Saving entry form sections",
+  "entry_form_sections_have_been_saved" : "Entry form sections have been saved",
+  "loading_entry_form_fields" : "Loading entry form fields",
+  "entry_form_fields_have_been_loaded" : "Entry form fields have been loaded",
+  "saving_entry_form_fields" : "Saving entry form fields",
+  "entry_form_fields_have_been_saved" : "Entry form fields have been saved",
+  "loading_sms_programs" : "Loading programs",
+  "loading_sms_commands" : "Loading SMS commands",
+  "sms_commands_have_been_loaded" : "SMS commands have been loaded",
+  "saving_sms_commands" : "Saving SMS commands",
+  "sms_commands_have_been_saved" : "SMS commands have been saved",
+  "programs_have_been_loaded" : "Programs have been loaded",
+  "saving_programs" : "Saving programs",
+  "programs_have_been_saved" : "Programs have been saved",
+  "loading_program_stage_section" : "Loading program stage sections",
+  "program_stage_section_have_been_loaded" : "Program stage sections have been loaded",
+  "saving_program_stage_section" : "Saving program stage sections",
+  "program_stage_section_have_been_saved" : "program stage sections have been saved",
+  "indicators_have_been_loaded" : "indicators have been loaded",
+  "saving_sms_indicators" : "Saving indicators",
+  "indicators_have_been_saved" : "Indicators have been saved",
+  "reports_have_been_loaded" : "Reports have been loaded",
+  "saving_reports" : "Saving reports",
+  "reports_have_been_saved" : "Reports have been saved",
+  "loading_constants" : "Loading constants",
+  "constants_have_been_loaded" : "Constants have been loaded",
+  "saving_constants" : "Saving constants",
+  "constants_have_been_saved" : "Constants have been saved",
   "loading_report_metadata" : "Loading report metadata",
   "loading_available_local_data" : "Loading available local data",
   "loading_entry_form_completeness_information" : "Loading entry form completeness information",
