Adding support for  translations for france and portuguese language

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,8 +22,8 @@
   "current_language" : "Current language",
   "synchronization" : "Synchronization",
   "auto_sync" : "Auto sync",
-  "minutes" : "Minute(s)",
-  "hours" : "Hour(s)",
+  "minutes" : "Minutes",
+  "hours" : "Hours",
   "form_label" : "Form Label",
   "display_name" : "Display Name",
   "form_name" : "Form Name",
@@ -96,6 +96,8 @@
   "enrolling_program" : "Enrolling Program",
   "list_of_widgets" : "List of widgets",
   "report" : "Reports",
+  "data_set_report" : "Data set report",
+  "standard_report" : "Standard report",
   "report_name" : "Report name",
   "report_view":"Report View",
   "generate_report" : "Generate Report",
@@ -126,7 +128,7 @@
   "loading_data_from_the_server" : "Loading data from the server",
   "saving_data_from_server" : "Saving data from server",
   "loading_current_user_authorities" : "Loading current user authorities",
-  "prepare_local_storage" : "Preparing local storage",
+  "preparing_local_storage" : "Preparing local storage",
   "loading_assigned_organisation_units" : "Loading assigned organisation units",
   "assigned_organisation_units_have_been_loaded" :"Assigned organisation units have been loaded",
   "assigned_organisation_units_have_been_saved" :"Assigned organisation units have been saved",
@@ -154,8 +156,8 @@
   "loading_program_stage_section" : "Loading program stage sections",
   "program_stage_section_have_been_loaded" : "Program stage sections have been loaded",
   "saving_program_stage_section" : "Saving program stage sections",
-  "program_stage_section_have_been_saved" : "program stage sections have been saved",
-  "indicators_have_been_loaded" : "indicators have been loaded",
+  "program_stage_section_have_been_saved" : "Program stage sections have been saved",
+  "indicators_have_been_loaded" : "Indicators have been loaded",
   "saving_sms_indicators" : "Saving indicators",
   "indicators_have_been_saved" : "Indicators have been saved",
   "reports_have_been_loaded" : "Reports have been loaded",
