--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,1 +1,194 @@
-{}
+{
+  "innovation_in_every_dimension" : "L'innovation dans toutes les dimensions",
+  "establishing_connection_to_server" : "Établir une connexion au serveur",
+  "aggregate_metadata" : "Métadonnées agrégées",
+  "Event_and_tracker_metadata" : "Métadonnées d'événement et de suivi",
+  "report_metadata" : "Signaler les métadonnées",
+  "enter_server_address" :"Entrez l'adresse du serveur",
+  "enter_username" : "Saisissez votre nom d'utilisateur",
+  "enter_password" : "Entrer le mot de passe",
+  "login" : "S'identifier",
+  "powered_by" : "Alimenté par",
+  "offline_instances" : "Instances hors connexion",
+  "or": "ou",
+  "apps" : "applications",
+  "account" : "Compte",
+  "about" : "Sur",
+  "profile" : "Profil",
+  "help" : "Aidez-moi",
+  "logout" : "Connectez - Out",
+  "settings" : "Paramètres",
+  "app_settings" : "Paramètre d'application",
+  "current_language" : "Langue courante",
+  "synchronization" : "Synchronisation",
+  "auto_sync" : "Synchronisation automatique",
+  "minutes" : "Minutes",
+  "hours" : "Heures",
+  "form_label" : "Étiquette de formulaire",
+  "display_name" : "Afficher un nom",
+  "form_name" : "Nom de forme",
+  "form_layout" : "disposition de formulaire",
+  "list_layout" : "Présentation de la liste",
+  "table_layout" : "Disposition de la table",
+  "data_element_per_page" : "Eléments de données par page(max)",
+  "dashboard" : "Tableau de bord",
+  "tracker_capture" : "capture de suivi",
+  "sync" : "Synchronisation",
+  "upload_data_via_sms" : "Télécharger des données via SMS",
+  "upload_data_via_internet" : "Télécharger des données via Internet",
+  "import_summaries" : "Importer des résumés",
+  "aggregate_data" : "Données agrégées",
+  "tracked_entity_instances" : "Instances d'entités suivies",
+  "tracked_entity_enrollments" : "Inscriptions d'entités suivies",
+  "events_for_tracker" : "Evénements pour tracker",
+  "success" : "Succès",
+  "failed" : "Échoué",
+  "import_conflicts_errors" : "Importer des conflits / erreurs",
+  "download_metadata" : "Télécharger les métadonnées",
+  "download_data" : "Télécharger les données",
+  "clear_local_data" : "Effacer les données locales",
+  "clear_local_metadata" : "Effacer les métadonnées locales",
+  "data_values" : "Valeurs de données",
+  "events" : "Événements",
+  "data_entry" : "La saisie des données",
+  "touch_to_select_organisation_unit" : "Appuyez pour sélectionner l'unité d'organisation",
+  "touch_to_select_entry_form" : "Appuyez pour sélectionner le formulaire d'inscription",
+  "touch_to_select_period" : "Appuyez pour sélectionner la période",
+  "data_entry_form_selection" : "Sélection du formulaire de saisie de données",
+  "data_dimension_selection" : "Sélection de la dimension des données",
+  "touch_to_select_option" : "Touchez pour sélectionner l'option",
+  "period_selection":"Sélection de la période",
+  "previous":"précédent",
+  "next" : "Prochain",
+  "there_is_no_period_to_select":"Il n'y a pas de période pour sélectionner",
+  "organisation_unit_selection": "Sélection de l'unité organisationnelle",
+  "organisation_unit" : "Unité d'organisation",
+  "form" : "Forme",
+  "period" : "Période",
+  "enter_data" : "Entrer des données",
+  "entry_form" : "Formulaire d'inscription",
+  "available_indicators" : "Indicateurs disponibles",
+  "complete" : "Achevée",
+  "undo_complete" : "Annuler",
+  "completed_by" : "Terminé par",
+  "on" : "sur",
+  "please_wait" : "S'il vous plaît, attendez",
+  "data_entry_form_sections" : "Sections du formulaire de saisie de données",
+  "completeness_information" : "Informations d'exhaustivité",
+  "full_name" : "Nom complet",
+  "username" : "Nom d'utilisateur",
+  "e_mail" : "E-mail",
+  "phone_number" : "Numéro de téléphone",
+  "event_capture" : "Capture d'événement",
+  "touch_to_select_program" : "Touchez pour sélectionner le programme",
+  "columns" : "Colonnes",
+  "add" : "Ajouter",
+  "event_register" : "Registre des événements",
+  "visible_header" : "En-tête visible",
+  "save" : "sauvegarder",
+  "select_all" : "Tout sélectionner",
+  "deselect_all" : "Tout déselectionner",
+  "program" : "Programme",
+  "program_selection" : "Sélection de programme",
+  "tracked_entity_dashboard" : "Tableau de bord de l'entité suivie",
+  "Registration" : "enregistrement",
+  "enrolling_organisation_unit" : "Inscription de l'unité d'organisation",
+  "enrolling_program" : "Programme d'inscription",
+  "list_of_widgets" : "Liste des widgets",
+  "reports" : "Rapports",
+  "data_set_report" : "Rapport de jeu de données",
+  "standard_report" : "Rapport standard",
+  "report_name" : "Nom du rapport",
+  "report_view":"Vue du rapport",
+  "generate_report" : "Générer un rapport",
+  "help_search" : "Aide à la recherche",
+  "search_help_by_title" : "Recherche d'aide par titre",
+  "dashboard_list" : "Liste de tableau de bord",
+  "system_info" : "Information système",
+  "assigned_organisation_units" : "Unités d'organisation affectées",
+  "user_information" : "Informations de l'utilisateur",
+  "assigned_roles" : "Rôles attribués",
+  "assigned_program" : "Programme assigné",
+  "assigned_form" : "Formulaire assigné",
+  "aggregate_status" : "Statut agrégé",
+  "event_status" : "Statut de l'événement",
+  "event_for_tracker_status" : "Événement pour l'état du suivi",
+  "enrollments" : "Inscriptions",
+  "preparing_table" : "Table de préparation",
+  "loading_current_user_information": "Chargement des informations utilisateur actuelles",
+  "loading_settings" : "Chargement des paramètres",
+  "loading_help_contents" : "Chargement du contenu de l'aide",
+  "loading" : "Chargement ...",
+  "loading_profile_information" : "Chargement des informations de profil",
+  "loading_user_information" : "Chargement des informations utilisateur",
+  "loading_entry_form_information" : "Chargement des informations du formulaire d'inscription",
+  "loading_available_local_instances" : "Chargement des instances locales disponibles",
+  "loading_indicators" : "Indicateurs de chargement",
+  "prepare_entry_form" : "Préparer le formulaire",
+  "loading_data_from_the_server" : "Chargement des données du serveur ",
+  "saving_data_from_server" : "Sauvegarde des données du serveur",
+  "loading_current_user_authorities" : "Chargement des autorités d'utilisateur actuelles",
+  "preparing_local_storage" : "Préparation du stockage local",
+  "loading_assigned_organisation_units" : "Chargement des unités d'organisation affectées",
+  "assigned_organisation_units_have_been_loaded" :"Les unités d'organisation affectées ont été chargées",
+  "assigned_organisation_units_have_been_saved" :"Les unités d'organisation affectées ont été sauvegardées",
+  "saving_assigned_organisation_units" : "Enregistrement des unités d'organisation affectées",
+  "loading_entry_forms" : "Chargement des formulaires d'inscription",
+  "entry_forms_have_been_loaded" : "Les formulaires d'inscription ont été chargés",
+  "saving_entry_forms" : "Enregistrement des formulaires d'inscription",
+  "entry_form_have_been_saved" : "Le formulaire d'inscription a été enregistré",
+  "loading_entry_form_sections" : "Chargement des sections du formulaire d'inscription",
+  "entry_form_sections_have_been_loaded" : "Les sections du formulaire d'entrée ont été chargées",
+  "saving_entry_form_sections" : "Enregistrement des sections du formulaire d'inscription",
+  "entry_form_sections_have_been_saved" : "Les sections du formulaire d'inscription ont été sauvegardées",
+  "loading_entry_form_fields" : "Chargement des champs du formulaire d'entrée",
+  "entry_form_fields_have_been_loaded" : "Les champs du formulaire d'entrée ont été chargés",
+  "saving_entry_form_fields" : "Enregistrement des champs du formulaire d'inscription",
+  "entry_form_fields_have_been_saved" : "Les champs du formulaire d'inscription ont été sauvegardés",
+  "loading_sms_programs" : "Chargement des programmes",
+  "loading_sms_commands" : "Chargement des commandes SMS",
+  "sms_commands_have_been_loaded" : "Les commandes SMS ont été chargées",
+  "saving_sms_commands" : "Enregistrement des commandes SMS",
+  "sms_commands_have_been_saved" : "Les commandes SMS ont été enregistrées",
+  "programs_have_been_loaded" : "Les programmes ont été chargés",
+  "saving_programs" : "Enregistrer des programmes",
+  "programs_have_been_saved" : "Les programmes ont été sauvegardés",
+  "loading_program_stage_section" : "Chargement des sections de l'étape du programme",
+  "program_stage_section_have_been_loaded" : "Les sections de l'étape du programme ont été chargées",
+  "saving_program_stage_section" : "Enregistrement des sections de l'étape du programme",
+  "program_stage_section_have_been_saved" : "les sections de l'étape du programme ont été sauvegardées ",
+  "indicators_have_been_loaded" : "les indicateurs ont été chargés",
+  "saving_sms_indicators" : "Indicateurs d'économie",
+  "indicators_have_been_saved" : "Les indicateurs ont été sauvegardés",
+  "reports_have_been_loaded" : "Les rapports ont été chargés",
+  "saving_reports" : "Enregistrement de rapports",
+  "reports_have_been_saved" : "Les rapports ont été sauvegardés",
+  "loading_constants" : "Constantes de chargement",
+  "constants_have_been_loaded" : "Les constantes ont été chargées",
+  "saving_constants" : "Enregistrement des constantes",
+  "constants_have_been_saved" : "Les constantes ont été enregistrées",
+  "loading_report_metadata" : "Chargement des métadonnées de rapport",
+  "loading_available_local_data" : "Chargement des données locales disponibles",
+  "loading_entry_form_completeness_information" : "Chargement des informations d'intégralité du formulaire d'entrée",
+  "loading_app_information" : "Chargement des informations de l'application",
+  "loading_system_information" : "Chargement des informations du système",
+  "loading_data_values_storage_status" : "Chargement de l'état de stockage des valeurs de données",
+  "loading_events_storage_status" : "Chargement de l'état de stockage des événements",
+  "loading_enrollments_storage_status" : "Chargement du statut de stockage des inscriptions",
+  "loading_assigned_programs" : "Chargement des programmes assignés",
+  "loading_data_set_report_information" : "Chargement des informations de rapport de l'ensemble de données",
+  "prepare_data_set_report" : "Préparation du rapport de jeu de données",
+  "no_data_to_display" : "aucune donnée à afficher",
+  "there_is_no_option_to_select" : "Il n'y a pas d'option pour sélectionner",
+  "there_is_no_data_entry_form_to_select" : "Il n'y a pas de formulaire de saisie de données à sélectionner",
+  "there_is_nothing_to_select" : "Il n'y a rien à sélectionner",
+  "there_no_data_at_the_moment" : "Il n'y a pas de données pour le moment",
+  "there_is_no_program_to_select" : "Il n'y a pas de programme à sélectionner",
+  "there_is_no_report_to_select" : "Il n'y a pas de rapport à sélectionner",
+  "there_is_no_widget_to_select" : "Il n'y a pas de widget à sélectionner",
+  "loading_reports" : "Chargement des rapports",
+  "downloading_reports_from_server" : "Télécharger des rapports depuis le serveur",
+  "prepare_local_storage_for_updates" : "Préparation du stockage local pour les mises à jour",
+  "saving_reports_from_server" : "Enregistrement de rapports à partir du serveur"
+}
+
