--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,1 +1,194 @@
-{}
+{
+  "innovation_in_every_dimension" : "Inovação em todas as dimensões",
+  "establishing_connection_to_server" : "Estabelecimento de conexão ao servidor",
+  "aggregate_metadata" : "Metadados agregados",
+  "Event_and_tracker_metadata" : "Metadados de eventos e rastreadores",
+  "report_metadata" : "Reportar metadados",
+  "enter_server_address" :"Digite o endereço do servidor",
+  "enter_username" : "Insira nome de usuário",
+  "enter_password" : "Digite a senha",
+  "login" : "Entrar",
+  "powered_by" : "Distribuído por",
+  "offline_instances" : "Instâncias off-line",
+  "or": "ou",
+  "apps" : "Aplicativos",
+  "account" : "Conta",
+  "about" : "Sobre",
+  "profile" : "Perfil",
+  "help" : "Socorro",
+  "logout" : "Sair",
+  "settings" : "Configurações",
+  "app_settings" : "Configuração da aplicação",
+  "current_language" : "Idioma atual",
+  "synchronization" : "Sincronização",
+  "auto_sync" : "Sincronização automática",
+  "minutes" : "Minutos",
+  "hours" : "Horas",
+  "form_label" : "Etiqueta de formulário",
+  "display_name" : "Mostrar nome",
+  "form_name" : "Nome do formulario",
+  "form_layout" : "Layout do formulário",
+  "list_layout" : "Layout da lista",
+  "table_layout" : "Layout da tabela",
+  "data_element_per_page" : "Elementos de dados por página (máximo)",
+  "dashboard" : "painel de controle",
+  "tracker_capture" : "Captura de rastreamento",
+  "sync" : "Sincronizar",
+  "upload_data_via_sms" : "Carregar dados via sms",
+  "upload_data_via_internet" : "Carregar dados via internet",
+  "import_summaries" : "Resumos de importação",
+  "aggregate_data" : "Dados agregados",
+  "tracked_entity_instances" : "Instâncias de entidade com rastreamento",
+  "tracked_entity_enrollments" : "Registro de entidades com rastreamento",
+  "events_for_tracker" : "Eventos para rastreador",
+  "success" : "Sucesso",
+  "failed" : "Falhou",
+  "import_conflicts_errors" : "Importar conflitos / erros",
+  "download_metadata" : "Baixar metadados",
+  "download_data" : "Baixar dados",
+  "clear_local_data" : "Limpe os dados locais",
+  "clear_local_metadata" : "Metadados locais claros",
+  "data_values" : "Valores de dados",
+  "events" : "Eventos",
+  "data_entry" : "Entrada de dados",
+  "touch_to_select_organisation_unit" : "Toque para selecionar a Unidade de organização",
+  "touch_to_select_entry_form" : "Toque para selecionar o formulário de inscrição",
+  "touch_to_select_period" : "Toque para selecionar o período",
+  "data_entry_form_selection" : "Seleção do formulário de entrada de dados",
+  "data_dimension_selection" : "Seleção de dimensão de dados",
+  "touch_to_select_option" : "Toque para selecionar a opção",
+  "period_selection":"Seleção do período",
+  "previous":"Anterior",
+  "next" : "Próximo",
+  "there_is_no_period_to_select":"Não há um período para selecionar",
+  "organisation_unit_selection": "Seleção da unidade organizacional",
+  "organisation_unit" : "Unidade de Organização",
+  "form" : "Formato",
+  "period" : "Período",
+  "enter_data" : "Inserir dados",
+  "entry_form" : "Formulário de inscrição",
+  "available_indicators" : "Indicadores disponíveis",
+  "complete" : "Completo",
+  "undo_complete" : "Desfazer completar",
+  "completed_by" : "Completado por",
+  "on" : "em",
+  "please_wait" : "Por favor, espere",
+  "data_entry_form_sections" : "Seções de formulário de entrada de dados",
+  "completeness_information" : "Informação detalhada",
+  "full_name" : "Nome completo",
+  "username" : "Nome de usuário",
+  "e_mail" : "O email",
+  "phone_number" : "Número de telefone",
+  "event_capture" : "Captação de eventos",
+  "touch_to_select_program" : "Toque para selecionar o programa",
+  "columns" : "Colunas",
+  "add" : "Adicionar",
+  "event_register" : "Registro de eventos",
+  "visible_header" : "Cabeçalho Visível",
+  "save" : "Salve ",
+  "select_all" : "Selecionar tudo",
+  "deselect_all" : "Desmarcar todos",
+  "program" : "Programa",
+  "program_selection" : "Seleção do programa",
+  "tracked_entity_dashboard" : "Painel de instrumentos de rastreamento",
+  "Registration" : "Cadastro",
+  "enrolling_organisation_unit" : "Unidade de organização de inscrição",
+  "enrolling_program" : "Programa de inscrição",
+  "list_of_widgets" : "Lista de widgets",
+  "reports" : "Relatórios",
+  "data_set_report" : "Relatório de conjunto de dados",
+  "standard_report" : "Relatório padrão",
+  "report_name" : "Nome do relatório",
+  "report_view":"Visualização do relatório",
+  "generate_report" : "Gerar relatório",
+  "help_search" : "Ajuda na busca",
+  "search_help_by_title" : "Procure ajuda por título",
+  "dashboard_list" : "Lista de painéis",
+  "system_info" : "Informação do sistema",
+  "assigned_organisation_units" : "Unidades de organização designadas",
+  "user_information" : "Informação do usuário",
+  "assigned_roles" : "Funções atribuídas",
+  "assigned_program" : "Programa atribuído",
+  "assigned_form" : "Formulário atribuído",
+  "aggregate_status" : "Status agregado",
+  "event_status" : "Status do evento",
+  "event_for_tracker_status" : "Evento para status de rastreador",
+  "enrollments" : "Inscrições",
+  "preparing_table" : "Tabela de preparação",
+  "loading_current_user_information": "Carregando informações atualizadas do usuário",
+  "loading_settings" : "Configurações de carregamento",
+  "loading_help_contents" : "Carregando conteúdo da ajuda",
+  "loading" : "Carregando ...",
+  "loading_profile_information" : "Carregando informações do perfil",
+  "loading_user_information" : "Carregando informações do usuário",
+  "loading_entry_form_information" : "Carregando informações do formulário de entrada",
+  "loading_available_local_instances" : "Carregando instâncias locais disponíveis",
+  "loading_indicators" : "Indicadores de carregamento",
+  "prepare_entry_form" : "Preparar formulário de inscrição",
+  "loading_data_from_the_server" : "Carregando dados do servidor",
+  "saving_data_from_server" : "Salvando dados do servidor",
+  "loading_current_user_authorities" : "Carregando as autoridades atuais dos usuários",
+  "preparing_local_storage" : "Preparando armazenamento local",
+  "loading_assigned_organisation_units" : "Carregando unidades de organização atribuídas",
+  "assigned_organisation_units_have_been_loaded" :"As unidades de organização atribuídas foram carregadas",
+  "assigned_organisation_units_have_been_saved" :"As unidades de organização atribuídas foram salvas",
+  "saving_assigned_organisation_units" : "Salvando unidades de organização designadas",
+  "loading_entry_forms" : "Carregando formulários de inscrição",
+  "entry_forms_have_been_loaded" : "Os formulários de inscrição foram carregados",
+  "saving_entry_forms" : "Salvando formulários de entrada",
+  "entry_form_have_been_saved" : "O formulário de inscrição foi salvo",
+  "loading_entry_form_sections" : "Carregando seções do formulário de entrada",
+  "entry_form_sections_have_been_loaded" : "Seções de formulário de entrada foram carregadas",
+  "saving_entry_form_sections" : "Salvando seções de formulário de entrada",
+  "entry_form_sections_have_been_saved" : "Seções de formulário de entrada foram salvas",
+  "loading_entry_form_fields" : "Carregando os campos do formulário de entrada",
+  "entry_form_fields_have_been_loaded" : "Campos de formulário de entrada foram carregados",
+  "saving_entry_form_fields" : "Salvando campos do formulário de entrada",
+  "entry_form_fields_have_been_saved" : "Os campos do formulário de entrada foram salvos",
+  "loading_sms_programs" : "Carregando programas",
+  "loading_sms_commands" : "Carregando comandos SMS",
+  "sms_commands_have_been_loaded" : "Os comandos do SMS foram carregados",
+  "saving_sms_commands" : "Salvando comandos de SMS",
+  "sms_commands_have_been_saved" : "Os comandos SMS foram salvos",
+  "programs_have_been_loaded" : "Os programas foram carregados",
+  "saving_programs" : "Salvando programas",
+  "programs_have_been_saved" : "Os programas foram salvos",
+  "loading_program_stage_section" : "Carregando as seções do estágio do programa",
+  "program_stage_section_have_been_loaded" : "Seções de estágio do programa foram carregadas",
+  "saving_program_stage_section" : "Salvando seções do estágio do programa",
+  "program_stage_section_have_been_saved" : "seções de estágio de programa foram salvas",
+  "indicators_have_been_loaded" : "Indicadores foram carregados",
+  "saving_sms_indicators" : "Indicadores de poupança",
+  "indicators_have_been_saved" : "Os indicadores foram salvos",
+  "reports_have_been_loaded" : "Os relatórios foram carregados",
+  "saving_reports" : "Salvando relatórios",
+  "reports_have_been_saved" : "Os relatórios foram salvos",
+  "loading_constants" : "Carregando constantes",
+  "constants_have_been_loaded" : "Constantes foram carregadas",
+  "saving_constants" : "Salvando constantes",
+  "constants_have_been_saved" : "Constantes foram salvas",
+  "loading_report_metadata" : "Carregando metadados do relatório",
+  "loading_available_local_data" : "Carregando dados locais disponíveis",
+  "loading_entry_form_completeness_information" : "Carregando informações de preenchimento do formulário de preenchimento",
+  "loading_app_information" : "Carregando informações do aplicativo",
+  "loading_system_information" : "Carregando informações do sistema",
+  "loading_data_values_storage_status" : "Carregando os valores dos dados de status de armazenamento",
+  "loading_events_storage_status" : "Carregando status de armazenamento de eventos",
+  "loading_enrollments_storage_status" : "Carregando status de armazenamento de inscrições",
+  "loading_assigned_programs" : "Carregando programas atribuídos",
+  "loading_data_set_report_information" : "Carregando informações do relatório do conjunto de dados",
+  "prepare_data_set_report" : "Preparando o relatório do conjunto de dados",
+  "no_data_to_display" : "Nenhum dado a ser exibido",
+  "there_is_no_option_to_select" : "Não há opção para selecionar",
+  "there_is_no_data_entry_form_to_select" : "Não há formulário de entrada de dados para selecionar",
+  "there_is_nothing_to_select" : "Não há nada para selecionar",
+  "there_no_data_at_the_moment" : "Não há dados no momento",
+  "there_is_no_program_to_select" : "Não há nenhum programa para selecionar",
+  "there_is_no_report_to_select" : "Não há relatório para selecionar",
+  "there_is_no_widget_to_select" : "Não há nenhum widget para selecionar",
+  "loading_reports" : "Carregando relatórios",
+  "downloading_reports_from_server" : "Transferir relatórios do servidor",
+  "prepare_local_storage_for_updates" : "Prepare armazenamento local para atualizações",
+  "saving_reports_from_server" : "Salvando relatórios do servidor"
+}
+
