Adding translation on sync status in about module

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,8 @@
   "apps" : "Apps",
   "account" : "Account",
   "about" : "About",
+  "synced" : "Synced",
+  "not_synced" : "Not synced",
   "profile" : "Profile",
   "help" : "Help",
   "logout" : "Logout",
