--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -14,6 +14,8 @@
   "apps" : "applications",
   "account" : "Compte",
   "about" : "Sur",
+  "synced" : "Synchronisé",
+  "not_synced" : "Non synchronisé",
   "profile" : "Profil",
   "help" : "Aidez-moi",
   "logout" : "Connectez - Out",
