Add empty message if no dashboard items as well as fixing overflow for charts

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -34,6 +34,11 @@
   "table_layout" : "Layout da tabela",
   "data_element_per_page" : "Elementos de dados por página (máximo)",
   "dashboard" : "painel de controle",
+  "there_no_dashboard_found" : "There are no dashboard found",
+  "search_dashboard_by_name" : "Search dashboard by name",
+  "dashboard_list" : "Lista de painéis",
+  "loading_dashboard" : "Discovering dashboards",
+  "there_no_dashboard_item_found" : "There are no dashboard items found",
   "tracker_capture" : "Captura de rastreamento",
   "sync" : "Sincronizar",
   "upload_data_via_sms" : "Carregar dados via sms",
@@ -105,7 +110,6 @@
   "generate_report" : "Gerar relatório",
   "help_search" : "Ajuda na busca",
   "search_help_by_title" : "Procure ajuda por título",
-  "dashboard_list" : "Lista de painéis",
   "system_info" : "Informação do sistema",
   "assigned_organisation_units" : "Unidades de organização designadas",
   "user_information" : "Informação do usuário",
