--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,11 @@
   "table_layout" : "Table layout",
   "data_element_per_page" : "Data elements per page(max)",
   "dashboard" : "Dashboard",
+  "there_no_dashboard_found" : "There are no dashboard found",
+  "search_dashboard_by_name" : "Search dashboard by name",
+  "dashboard_list" : "Dashboard list",
+  "loading_dashboard" : "Discovering dashboards",
+  "there_no_dashboard_item_found" : "There are no dashboard items found",
   "tracker_capture" : "Tracker Capture",
   "sync" : "Sync",
   "upload_data_via_sms" : "Upload data via sms",
@@ -105,7 +110,6 @@
   "generate_report" : "Generate Report",
   "help_search" : "Help search",
   "search_help_by_title" : "Search help by title",
-  "dashboard_list" : "Dashboard list",
   "system_info" : "System info",
   "assigned_organisation_units" : "Assigned organisation units",
   "user_information" : "User information",
