--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -34,6 +34,12 @@
   "table_layout" : "Disposition de la table",
   "data_element_per_page" : "Eléments de données par page(max)",
   "dashboard" : "Tableau de bord",
+  "dashboard_list" : "Liste de tableau de bord",
+  "there_no_dashboard_found" : "There are no dashboard found",
+  "search_dashboard_by_name" : "Search dashboard by name",
+  "dashboard_list" : "Dashboard list",
+  "loading_dashboard" : "Discovering dashboards",
+  "there_no_dashboard_item_found" : "There are no dashboard items found",
   "tracker_capture" : "capture de suivi",
   "sync" : "Synchronisation",
   "upload_data_via_sms" : "Télécharger des données via SMS",
@@ -105,7 +111,6 @@
   "generate_report" : "Générer un rapport",
   "help_search" : "Aide à la recherche",
   "search_help_by_title" : "Recherche d'aide par titre",
-  "dashboard_list" : "Liste de tableau de bord",
   "system_info" : "Information système",
   "assigned_organisation_units" : "Unités d'organisation affectées",
   "user_information" : "Informations de l'utilisateur",
